# multicoders

./: .env.example  .gitignore  .gitmodules  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
_refs/: discusion_jesus.txt
contrib/: multicoders.service
docs/: ARCHITECTURE.md  BOT_CHAT.md  BRAINSTORMING.md  IMPROVEMENTS.md  MEDIA_MESSAGES.md
documents/: SPEC_Multicoders.md
documents/graph/: graphindex_corpus_agent.py
documents/sdd/: GUIDE.md
etc/: config.ini
multicoders/: __init__.py  __main__.py  app.py  arena.py  cli.py  config.py  demo.py  dispatcher.py  factory.py  flow.py  hornero.py  main.py  mocks.py  orchestrator.py  parrot_bot.py  parrot_flow.py  parrot_lens.py  prompts.py  providers.py  qa.py  research.py  schema.sql  stacks.py  storage.py  telegram.py  telemetry.py  tools_integration.py
multicoders/backends/: __init__.py  adapter.py  api.py  base.py  cli.py  mock.py  parrot.py  resolver.py
multicoders/domains/: __init__.py  base.py  code.py  process.py
multicoders/memory/: __init__.py  base.py  decision.py  graphindex.py  pageindex.py  service.py  working.py
tests/: test_arena.py  test_arena_unittest.py  test_backends.py  test_checkpoints.py  test_cli.py  test_consensus.py  test_domains.py  test_dry_run.py  test_factory.py  test_flow_cleanup.py  test_flow_e2e.py  test_formatting.py  test_memory.py  test_memory_knowledge.py  test_parrot_flow.py  test_parrot_integration.py  test_prompts.py  test_providers.py  test_qa.py  test_research_parser.py  test_security_qa.py  test_telegram.py  test_worktree.py
(+6 files in other folders)
