[project]
name = "multicoders"
version = "0.1.0"
description = "Deterministic Agent Orchestration based on ai-parrot"
authors = [
    { name = "Jelitox", email = "jelitox@example.com" }
]
dependencies = [
    "ai-parrot",
    "ai-parrot-tools[git,docker,sandbox,codeinterpreter,db]",
    "nest-asyncio>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
hornero = [
    "hornero[knowledge]>=0.4",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["multicoders*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["_refs", ".git", ".venv"]

[tool.uv.sources]
ai-parrot = { path = "_refs/ai-parrot/packages/ai-parrot", editable = true }
ai-parrot-tools = { path = "_refs/ai-parrot/packages/ai-parrot-tools", editable = true }
